create method to hide and show div

--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ table tbody td .remove:hover{
 
 
 div.no-favorites{
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   gap: 6rem;
